First push to check whether everything is set or not

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">BoiiMela</string>
+    <string name="project_name">BoiiMela</string>
+    <string name="project_description">Semester 6 project made by Gourab Nandi, Saqib Javed, Swarnadeep Roy</string>
 </resources>
